# Finnhub_data_collector

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  python-app.yml
src/: check_data.py
src/database/: postgres_manager.py  reset_db.py  test_connection.py
src/types/: websocket.pyi
src/utils/: rate_limiter.py
src/visualization/: app.py
tests/: conftest.py  test_api.py  test_db.py  test_rate_limiter.py
