[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "stock-tracker"
version = "0.1.0"
description = "Real-time stock data tracking and visualization"
authors = [{name = "Your Name"}]
requires-python = ">=3.12"
dependencies = [
    "websocket-client>=1.6.1",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
]

[tool.poetry]
name = "stock-tracker"
version = "0.1.0"
description = "Real-time stock data tracking and visualization"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
websocket-client = "^1.6.1"
pandas = "^2.1.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
streamlit = "^1.29.0"
plotly = "^5.18.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.5.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[tool.setuptools]
packages = ["src", "src.database", "src.visualization"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = """
    -ra
    -q
    --strict-markers
    --tb=short
    --import-mode=importlib
    --durations=5
    --maxfail=2
    --cache-clear
"""

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
